changed from asp to normal html pages

--- a/PasswordManager3342/PasswordManager3342.csproj
+++ b/PasswordManager3342/PasswordManager3342.csproj
@@ -88,9 +88,8 @@
     <Content Include="js\jquery.dataTables.min.js" />
     <Content Include="js\lab4.js" />
     <Content Include="js\popper.min.js" />
-    <Content Include="manageAccount.aspx" />
-    <Content Include="modifyPassword.aspx" />
-    <Content Include="myPasswords.aspx" />
+    <Content Include="manageAccount.html" />
+    <Content Include="passwordManagment.html" />
     <Content Include="PHPMailer-master\get_oauth_token.php" />
     <Content Include="PHPMailer-master\language\phpmailer.lang-am.php" />
     <Content Include="PHPMailer-master\language\phpmailer.lang-ar.php" />
@@ -162,34 +161,6 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="manageAccount.aspx.cs">
-      <DependentUpon>manageAccount.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="manageAccount.aspx.designer.cs">
-      <DependentUpon>manageAccount.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="modifyPassword.aspx.cs">
-      <DependentUpon>modifyPassword.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="modifyPassword.aspx.designer.cs">
-      <DependentUpon>modifyPassword.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="myPasswords.aspx.cs">
-      <DependentUpon>myPasswords.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="myPasswords.aspx.designer.cs">
-      <DependentUpon>myPasswords.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="passwordManager.Master.cs">
-      <DependentUpon>passwordManager.Master</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="passwordManager.Master.designer.cs">
-      <DependentUpon>passwordManager.Master</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -205,7 +176,6 @@
     <Content Include="css\bootstrap.min.css.map" />
     <Content Include="Images\favicon.icon" />
     <None Include="packages.config" />
-    <Content Include="passwordManager.Master" />
     <Content Include="PHPMailer-master\LICENSE" />
     <Content Include="PHPMailer-master\README.md" />
     <Content Include="PHPMailer-master\SECURITY.md" />
