--- a/PasswordManager3342/PasswordManager3342.csproj
+++ b/PasswordManager3342/PasswordManager3342.csproj
@@ -78,6 +78,7 @@
     <Content Include="css\jquery.dataTables.min.css" />
     <Content Include="css\lab4.css" />
     <Content Include="css\signin.css" />
+    <Content Include="js\passwordPage.js" />
     <Content Include="login.html" />
     <Content Include="js\bootstrap.bundle.js" />
     <Content Include="js\bootstrap.bundle.min.js" />
