--- a/PasswordManager3342/PasswordManager3342.csproj
+++ b/PasswordManager3342/PasswordManager3342.csproj
@@ -153,6 +153,7 @@
     <Content Include="php\emailCheck.php" />
     <Content Include="php\login.php" />
     <Content Include="php\logout.php" />
+    <Content Include="php\managerNewPassword.php" />
     <Content Include="php\readRegState.php" />
     <Content Include="php\register.php" />
     <Content Include="php\register0.php" />
