Part way for edit password integration

--- a/PasswordManager3342/PasswordManager3342.csproj
+++ b/PasswordManager3342/PasswordManager3342.csproj
@@ -160,6 +160,7 @@
     <Content Include="php\resetPassword0.php" />
     <Content Include="php\setPassword.php" />
     <Content Include="php\showAll.php" />
+    <Content Include="php\updatePassword.php" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
