"managerDeletePassword", "managerEditPassword", and "managerNewPassword"

--- a/PasswordManager3342/PasswordManager3342.csproj
+++ b/PasswordManager3342/PasswordManager3342.csproj
@@ -150,6 +150,7 @@
     <Content Include="php\authenticate.php" />
     <Content Include="php\back.php" />
     <Content Include="php\config.php" />
+    <Content Include="php\managerDeletePassword.php" />
     <Content Include="php\managerEditPassword.php" />
     <Content Include="php\emailCheck.php" />
     <Content Include="php\login.php" />
