buncha messing with things to get pho to dusplay, login works, added basic password generation.

--- a/PasswordManager3342/PasswordManager3342.csproj
+++ b/PasswordManager3342/PasswordManager3342.csproj
@@ -43,6 +43,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AspNet.ScriptManager.jQuery, Version=3.6.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\AspNet.ScriptManager.jQuery.3.6.0\lib\net45\AspNet.ScriptManager.jQuery.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -74,6 +77,7 @@
     <Content Include="css\bootstrap.css" />
     <Content Include="css\bootstrap.min.css" />
     <Content Include="Images\bootstrap-logo.svg" />
+    <Content Include="Images\favicon.jpg" />
     <Content Include="Images\lock.jpg" />
     <Content Include="css\jquery.dataTables.min.css" />
     <Content Include="css\lab4.css" />
@@ -84,8 +88,6 @@
     <Content Include="js\bootstrap.bundle.min.js" />
     <Content Include="js\bootstrap.js" />
     <Content Include="js\bootstrap.min.js" />
-    <Content Include="js\jquery-3.3.1.min.js" />
-    <Content Include="js\jquery-3.6.0.min.js" />
     <Content Include="js\jquery.dataTables.min.js" />
     <Content Include="js\lab4.js" />
     <Content Include="js\popper.min.js" />
@@ -159,6 +161,11 @@
     <Content Include="php\resetPassword0.php" />
     <Content Include="php\setPassword.php" />
     <Content Include="php\showAll.php" />
+    <None Include="Scripts\jquery-3.6.0.intellisense.js" />
+    <Content Include="Scripts\jquery-3.6.0.js" />
+    <Content Include="js\jquery-3.6.0.min.js" />
+    <Content Include="Scripts\jquery-3.6.0.slim.js" />
+    <Content Include="Scripts\jquery-3.6.0.slim.min.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -175,12 +182,13 @@
     <Content Include="css\bootstrap-reboot.min.css.map" />
     <Content Include="css\bootstrap.css.map" />
     <Content Include="css\bootstrap.min.css.map" />
-    <Content Include="Images\favicon.icon" />
     <None Include="packages.config" />
     <Content Include="PHPMailer-master\LICENSE" />
     <Content Include="PHPMailer-master\README.md" />
     <Content Include="PHPMailer-master\SECURITY.md" />
     <Content Include="PHPMailer-master\VERSION" />
+    <Content Include="Scripts\jquery-3.6.0.slim.min.map" />
+    <Content Include="Scripts\jquery-3.6.0.min.map" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
